sandc/test/fixtures/astRegression/shouldSucceed/productions/classItem/ClassInnerInterfaceDeclaration.sand
pub class ClassInnerInterfaceDeclaration {
    interface Inner {

    }

    pub interface Inner {

    }

    interface Inner<T, U extends Foo & Bar, R super S> {

    }

    interface Inner extends Foo, Bar<Baz> {
        
    }
}