sandc/test/fixtures/astRegression/shouldFail/productions/notinstanceofExpression/GenericTypeInstantiation.sand
pub class GenericTypeInstantiation {
    foo() {
        x() notinstanceof Foo<Bar>
    }
}